--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -41,19 +41,18 @@ select {
 body {
     width: 100%;
     height: 100dvh;
-    font-family:
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        'Roboto',
-        'Segoe UI',
-        'Oxygen',
-        'Ubuntu',
-        'Cantarell',
-        'Fira Sans',
-        'Droid Sans',
-        'Helvetica Neue',
-        sans-serif;
+    font-family: system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Roboto',
+    'Segoe UI',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
     -webkit-font-smoothing: antialiased;
     line-height: 1.5rem;
     color: hsl(var(--text));
@@ -157,31 +156,28 @@ li {
 }
 
 .font-default {
-    font-family:
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        'Roboto',
-        'Segoe UI',
-        'Oxygen',
-        'Ubuntu',
-        'Cantarell',
-        'Fira Sans',
-        'Droid Sans',
-        'Helvetica Neue',
-        sans-serif;
+    font-family: system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Roboto',
+    'Segoe UI',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
 
 .font-label {
-    font-family:
-        ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT',
-        'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
+    font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT',
+    'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
 }
 
 .font-mono {
-    font-family:
-        ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
-        monospace;
+    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
+    monospace;
 }
 
 .absolute {
@@ -339,6 +335,37 @@ input:disabled {
 
 pre {
     background: hsl(var(--bg-high));
+}
+
+.html-render {
+    display: block;
+    line-height: 1.5rem;
+}
+
+.html-render input {
+    width: inherit;
+    margin: inherit;
+    border: inherit;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    color: hsl(var(--text));
+    font-size: 1.05rem;
+    outline: inherit;
+}
+
+.html-render ol, .html-render ul {
+    padding-left: 1rem;
+}
+
+.html-render p {
+    margin: .5rem 0;
+    max-width: 467pt;
+}
+
+.html-render blockquote {
+    padding-left: .33rem;
+    border-left: 3px solid hsl(var(--accent));
+    border-radius: var(--border-radius);
+    background-color: hsl(var(--bg-high));
 }
 
 .fade-in {
