--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -41,18 +41,19 @@ select {
 body {
     width: 100%;
     height: 100dvh;
-    font-family: system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Roboto',
-    'Segoe UI',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        'Roboto',
+        'Segoe UI',
+        'Oxygen',
+        'Ubuntu',
+        'Cantarell',
+        'Fira Sans',
+        'Droid Sans',
+        'Helvetica Neue',
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     line-height: 1.5rem;
     color: hsl(var(--text));
@@ -156,28 +157,31 @@ li {
 }
 
 .font-default {
-    font-family: system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Roboto',
-    'Segoe UI',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        'Roboto',
+        'Segoe UI',
+        'Oxygen',
+        'Ubuntu',
+        'Cantarell',
+        'Fira Sans',
+        'Droid Sans',
+        'Helvetica Neue',
+        sans-serif;
 }
 
 .font-label {
-    font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT',
-    'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
+    font-family:
+        ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT',
+        'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
 }
 
 .font-mono {
-    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
-    monospace;
+    font-family:
+        ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
+        monospace;
 }
 
 .absolute {
@@ -352,17 +356,18 @@ pre {
     outline: inherit;
 }
 
-.html-render ol, .html-render ul {
+.html-render ol,
+.html-render ul {
     padding-left: 1rem;
 }
 
 .html-render p {
-    margin: .5rem 0;
+    margin: 0.5rem 0;
     max-width: 467pt;
 }
 
 .html-render blockquote {
-    padding-left: .33rem;
+    padding-left: 0.33rem;
     border-left: 3px solid hsl(var(--accent));
     border-radius: var(--border-radius);
     background-color: hsl(var(--bg-high));
